--- a/css/chat.css
+++ b/css/chat.css
@@ -45,13 +45,16 @@ a {
 #chat-box {
     text-align:left;
     margin:0 auto;
-    margin-bottom:25px;
+    margin-top: 15px;
+    margin-bottom:15px;
     padding:10px;
     background:#fff;
     height:280px;
-    width:auto;
+    width:750px;
     border:1px solid #E6E6E6;
-    overflow:auto; }
+    overflow:auto; 
+    float: left;
+}
  
 #chat-msg{
     margin:0 auto;
@@ -59,6 +62,20 @@ a {
     width:970px;
     overflow:auto; 
 } 
+
+#chat-users{
+    text-align:left;
+    padding: 10px;
+    margin-top: 15px;
+    margin-bottom:15px;
+    background:#fff;
+    height:280px;
+    width:100px;
+    border:1px solid #E6E6E6;
+    overflow:auto; 
+    float: right;
+}
+
 #usermsg {
     background:#fff;
     width:900px;
